fix tiny overflow bug in mobile footnotes

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -618,6 +618,7 @@ main {
 
   .mobile-footnote {
     padding: 20px;
+    overflow-wrap: break-word;
   }
 
   &.open {
